<resources>
    <string name="app_name">HealthChecker</string>

    <string name="date_text">2020.01</string>
    <string name="count_view">0.00km</string>
    <string name="time_view">00:00:00</string>
    <string name="real_health_rank_lable">실시간 체력 검정 등급</string>
    <string name="real_health_rank">미정</string>
    <string name="start">시작</string>

    <string name="running">달리기</string>
    <string name="pushUp">팔굽혀펴기</string>
    <string name="sitUp">윗몸일으키기</string>

    <string name="runningValue">달린 거리</string>
    <string name="useTime">소요 시간</string>
    <string name="giftValue">보상 인정 거리</string>
    <string name="healthRank">체력 검정 등급</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>

    <string name="gift_ok_length">보상 인정 거리</string>
    <string name="gift">선물상자</string>
    <string name="gift_goal1">10km</string>
    <string name="gift_goal2">20km</string>
    <string name="gift_goal3">30km</string>
    <string name="gift_goal4">40km</string>
    <string name="gift_goal5">50km</string>

    <string name="recode">기록</string>
    <string name="competition">경쟁</string>
</resources>
