<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorLightGray"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/countView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/count_view"
                android:textAlignment="center"
                android:textSize="80sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_view"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-70dp"
            android:background="@color/colorBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/realHealthRankLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/real_health_rank_lable"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/realHealthRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/real_health_rank"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#75BBE1"
                android:text="@string/start"
                android:textColor="#99000000"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>